@@ -1,3 +1,14 @@
+2001-12-07  Nathan Myers  <ncm@cantrip.org>
+	    Loren Rittle <ljrittle@acm.org>
+
+	libstdc++/5037
+	* config/cpu/sparc/sparc32/bits/atomicity.h
+	(struct __Atomicity_lock<__inst>): Add.
+	(__Atomicity_lock<__inst>::_S_atomicity_lock): Add.
+	(__exchange_and_add): Use __Atomicity_lock<0>::_S_atomicity_lock
+	instead of lock local to static function.
+	(__atomic_add): Likewise.
+
 2001-12-07  Phil Edwards  <pme@gcc.gnu.org>
 
 	* src/globals.cc:  Remove __GTHREADS guard.
